// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text snapshots (M6.0) > system guidance and help stay stable > checkpoint 1`] = `
"[Compressed conversation section]
summary

<dcp-message-id>b1</dcp-message-id>"
`;

exports[`text snapshots (M6.0) > system guidance and help stay stable > guidance-auto 1`] = `
"## Dynamic Context Pruning (DCP)

You may compress closed, completed conversation ranges with the \`compress\` tool when they are no longer needed verbatim. This frees context for continuing work.

- Ranges are half-open: \`startRef\` is included, \`endRef\` is excluded.
- Only choose ranges that are closed and do not cut an in-flight tool call/result pair.
- Do not compress the current turn, active tool work, protected user instructions, or protected tool outputs.
- Protected content may be appended verbatim after your summary; do not omit it.
- You may pass multiple non-overlapping closed ranges in one call; each range is committed as an independent transaction.
- Summary text must be plain prose containing the actual technical content and must not begin with blockRef markers like \`[b1]\`; do not use pointer-only placeholders such as \`[stored in bN]\` — the plugin assigns the checkpoint id.
- Each completed compression replaces the range with a summary checkpoint marked \`<dcp-message-id>bN</dcp-message-id>\`.
- After a successful compress, the checkpoint user message is authoritative and contains the full summary; any \`[stored in bN]\` inside the assistant tool-call arguments is only the inline cleanup marker, not the stored summary.
- If a range is invalid (stale, overlapping, protected, or cuts an open tool pair), retry with a current, closed, safer range.
- If a range is valid but saves too few tokens, do not retry the same small range: choose a LARGER older closed range or write a more compact high-fidelity summary; otherwise leave it uncompressed."
`;

exports[`text snapshots (M6.0) > system guidance and help stay stable > guidance-manual 1`] = `
"## Dynamic Context Pruning (DCP)

You may compress closed, completed conversation ranges with the \`compress\` tool when they are no longer needed verbatim. This frees context for continuing work.

- Ranges are half-open: \`startRef\` is included, \`endRef\` is excluded.
- Only choose ranges that are closed and do not cut an in-flight tool call/result pair.
- Do not compress the current turn, active tool work, protected user instructions, or protected tool outputs.
- Protected content may be appended verbatim after your summary; do not omit it.
- You may pass multiple non-overlapping closed ranges in one call; each range is committed as an independent transaction.
- Summary text must be plain prose containing the actual technical content and must not begin with blockRef markers like \`[b1]\`; do not use pointer-only placeholders such as \`[stored in bN]\` — the plugin assigns the checkpoint id.
- Each completed compression replaces the range with a summary checkpoint marked \`<dcp-message-id>bN</dcp-message-id>\`.
- After a successful compress, the checkpoint user message is authoritative and contains the full summary; any \`[stored in bN]\` inside the assistant tool-call arguments is only the inline cleanup marker, not the stored summary.
- If a range is invalid (stale, overlapping, protected, or cuts an open tool pair), retry with a current, closed, safer range.
- If a range is valid but saves too few tokens, do not retry the same small range: choose a LARGER older closed range or write a more compact high-fidelity summary; otherwise leave it uncompressed.

Manual mode is active: do not call \`compress\` unless explicitly triggered by \`/dcp compress\`."
`;

exports[`text snapshots (M6.0) > system guidance and help stay stable > help 1`] = `
"DCP commands:
  /dcp help      show this help
  /dcp context   show token usage breakdown for the current session
  /dcp stats     show DCP statistics
  /dcp manual [on|off|status]
  /dcp sweep     run automatic pruning in a control turn
  /dcp compress [focus]
  /dcp show <bN> [--raw]
  /dcp decompress <bN> [--into-context]
  /dcp recompress <bN>
The model-facing \`compress\` tool performs range compression."
`;
